--- a/weather-stylesheet.css
+++ b/weather-stylesheet.css
@@ -23,10 +23,14 @@
     color: white;
     font-weight: bold;
 }
+.default{
+    background-color: aliceblue;
+    color: black;
+}
 #dataPrint{
     background: rgb(244,220,200);
 background: linear-gradient(35deg, rgba(244,220,200,1) 11%, rgba(244,186,110,1) 19%, rgba(120,173,242,1) 30%, rgba(47,115,203,1) 40%, rgba(47,72,113,1) 75%, rgba(26,42,96,1) 90%);
-color:white;
+color: black;
 }
 
 .inputDetails{
@@ -34,3 +38,7 @@ color:white;
     font-size: 17px;
     font-weight: bold;
 }
+.wrap-nowrap {
+    overflow-x: hidden;
+    flex-grow: 1;
+  }
